<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sell"
        android:title="@string/sell_item"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_reports"
        android:title="@string/reports_analytics"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_audit_logs"
        android:title="Audit Logs"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="Settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>